[metadata]
name = nanorc
version = attr: nanorc.__version__
url = https://github.com/DUNE-DAQ/nanorc
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nanorc = nanorc.__main__:main
    nano-opmon = nanorc.tools.opmon:main
    nano-drawconf = nanorc.tools.drawconf:main
